--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -23,6 +23,7 @@
     background: transparent;
     border-color: var(--primary-button-color);
     cursor: default;
+    transform: scale(1.1);
 }
 
 .experience__container > div h3{
