--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -26,6 +26,8 @@
 .portfolio__item:hover {
     background: var(--portfolio-hover);
     border-color: var(--primary-color-variant);
+    transform: scale(1.1);
+
 }
 
 .portfolio__item-image {
