--- a/src/components/theme-toggler-button/themetogglerbutton.css
+++ b/src/components/theme-toggler-button/themetogglerbutton.css
@@ -25,3 +25,19 @@
     display: flex;
     flex-direction: column;
 }
+
+@media screen and (max-width:1024px){
+    .theme-container{
+        display: block;
+        margin-top:0.42rem;
+        
+    }
+    .theme-container > small {
+        display:none;
+    }
+
+    .theme-container > button {
+        font-size:1.5rem;
+    }
+
+}
